...

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/what_input"
                    android:ems="10"
                    android:id="@+id/text"/>

            <Button
                    android:id="@+id/check_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/click_button"
                    android:textStyle="bold"/>
...
